Creating CustomForm and CustomInput Components -fixing some layout issues on App.js

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -6,6 +6,7 @@ $black-color: #000;
 $grey-color: #707070;
 $light-grey-color: lighten($grey-color, 25%);
 $white-color: #fff;
+$invalid-color: #ec3b3b;
 
 %heightFullvh {
   height: 100vh;
