--- a/src/components/InteractiveArea/InteractiveArea.scss
+++ b/src/components/InteractiveArea/InteractiveArea.scss
@@ -1,7 +1,6 @@
 @import '../../assets/scss/variables';
 
 .interactive-area {
-  @extend %heightFullvh;
   background-color: $white-color;
   font-family: $primary-font;
   margin: 100px 120px 50px;
